[gd_scene load_steps=4 format=3 uid="uid://bywieb3jacjqv"]

[ext_resource type="Script" path="res://scripts/nodes/MenuUI.gd" id="1_hu0kx"]
[ext_resource type="TileSet" uid="uid://bpqn6yjwtffxq" path="res://assets/resources/tileset_base.tres" id="1_lf8al"]
[ext_resource type="Script" path="res://scripts/TileMapScript.gd" id="2_5rfag"]

[node name="Master" type="Node"]

[node name="Node2D" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Node2D"]

[node name="TileMap" type="TileMap" parent="Node2D"]
tile_set = ExtResource("1_lf8al")
format = 2
layer_0/tile_data = PackedInt32Array(-131076, 0, 5, -65539, 65536, 6, -65538, 65536, 6, -65537, 65536, 6, -131072, 65536, 6, -131071, 65536, 6, -65535, 65536, 6, -65536, 65536, 6, -1, 65536, 6, -2, 65536, 6, -3, 65536, 6, -65540, 0, 6, -4, 0, 6, 65532, 0, 7, 65533, 65536, 7, 65534, 65536, 7, 65535, 65536, 7, 0, 65536, 7, 1, 65536, 7, 2, 131072, 7, -65534, 131072, 6, -131070, 0, 8, -131075, 65536, 5, -131074, 65536, 5, -131073, 65536, 5, -196608, 65536, 5, -196607, 65536, 5, -196606, 65536, 5, -131069, 131072, 7, -196605, 131072, 5)
script = ExtResource("2_5rfag")

[node name="UI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -640.0
offset_top = -360.0
offset_right = -640.0
offset_bottom = -360.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuUI" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hu0kx")

[node name="TabContainer" type="TabContainer" parent="UI/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.45
anchor_bottom = 0.3
grow_horizontal = 2
grow_vertical = 2
tab_alignment = 1

[node name="Host" type="Control" parent="UI/MenuUI/TabContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="UI/MenuUI/TabContainer/Host"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.5
text = "9001"
placeholder_text = "Port"
alignment = 1

[node name="Button" type="Button" parent="UI/MenuUI/TabContainer/Host"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.9
text = "Host"

[node name="Join" type="Control" parent="UI/MenuUI/TabContainer"]
visible = false
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="UI/MenuUI/TabContainer/Join"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.5
text = "localhost:9001"
placeholder_text = "Server address"
alignment = 1

[node name="Button" type="Button" parent="UI/MenuUI/TabContainer/Join"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.6
anchor_right = 0.6
anchor_bottom = 0.9
text = "Join"

[node name="NameContainer" type="TabContainer" parent="UI/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.3
anchor_right = 0.45
anchor_bottom = 0.4
tabs_visible = false

[node name="Control" type="Control" parent="UI/MenuUI/NameContainer"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="UI/MenuUI/NameContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8
placeholder_text = "Your dislay name"
alignment = 1
max_length = 24

[node name="FeedbackContainer" type="TabContainer" parent="UI/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.4
anchor_right = 0.45
anchor_bottom = 0.9
tabs_visible = false

[node name="Control" type="Control" parent="UI/MenuUI/FeedbackContainer"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/MenuUI/FeedbackContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 0.8
bbcode_enabled = true
scroll_following = true

[node name="Button" type="Button" parent="UI/MenuUI/FeedbackContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.85
anchor_right = 0.6
anchor_bottom = 0.9
text = "Disconnect"

[node name="PlayerList" type="TabContainer" parent="UI/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.55
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.75
tabs_visible = false

[node name="Control" type="Control" parent="UI/MenuUI/PlayerList"]
layout_mode = 2

[node name="Header" type="Control" parent="UI/MenuUI/PlayerList/Control"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.12

[node name="Label" type="Label" parent="UI/MenuUI/PlayerList/Control/Header"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.15
anchor_bottom = 1.0
text = "ROLE"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label2" type="Label" parent="UI/MenuUI/PlayerList/Control/Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_right = 0.45
anchor_bottom = 1.0
text = "ID"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label3" type="Label" parent="UI/MenuUI/PlayerList/Control/Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.45
anchor_right = 0.85
anchor_bottom = 1.0
text = "NAME"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="Label4" type="Label" parent="UI/MenuUI/PlayerList/Control/Header"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
text = "READY"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="ScrollContainer" type="ScrollContainer" parent="UI/MenuUI/PlayerList/Control"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.12
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MenuUI/PlayerList/Control/ScrollContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2

[node name="HideButton" type="Button" parent="UI/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.4
anchor_right = 0.02
anchor_bottom = 0.6
offset_right = 8.0
offset_bottom = 8.0
text = "Hide"

[node name="ShowButton" type="Button" parent="UI/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.4
anchor_right = 1.02
anchor_bottom = 0.6
offset_right = 8.0
offset_bottom = 8.0
text = "Show"

[node name="ReadyButton" type="Button" parent="UI/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.8
anchor_right = 0.7
anchor_bottom = 0.85
text = "Ready"

[node name="StartButton" type="Button" parent="UI/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.8
anchor_right = 0.9
anchor_bottom = 0.85
text = "Start"

[node name="ReadyCheckBox" type="CheckBox" parent="UI/MenuUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.8
anchor_right = 0.71
anchor_bottom = 0.85
focus_mode = 0
disabled = true
clip_text = true
icon_alignment = 1
expand_icon = true
